src/objects/CventEvents__AttendeeTemp__c.object
<CustomObject>
    <description>Auxiliary object used for storing a fusion of contact and event participation information retrieved from Cvent.</description>
    <fields>
        <fullName>CDT__c</fullName>
        <label>CDT #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_AdmissionItem__c</fullName>
        <label>Admission Item</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_AmountOrdered__c</fullName>
        <label>Amount Ordered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_AmountPaid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Attended__c</fullName>
        <description>Represents whether the Attendee participated Event or not.</description>
        <label>Attended</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_AttendeeStatus__c</fullName>
        <label>Attendee Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_AttendeeStub__c</fullName>
        <externalId>true</externalId>
        <label>Attendee Stub</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_AttendingFormat__c</fullName>
        <label>Attendee Format</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_BalanceDue__c</fullName>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_CCEmailAddress__c</fullName>
        <label>CC Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_CCPARequestDate__c</fullName>
        <label>(CCPA) &quot;Do Not Sell&quot; Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_CCPARequester__c</fullName>
        <label>(CCPA) &quot;Do Not Sell&quot; Requester</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_CCPAStatus__c</fullName>
        <label>(CCPA) &quot;Do Not Sell&quot; Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_ConfirmationNumber__c</fullName>
        <label>Confirmation Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_ContactStub__c</fullName>
        <externalId>true</externalId>
        <label>Contact Stub</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_ContactTypeName__c</fullName>
        <label>Contact Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a Cvent contact has been removed from address book.</description>
        <inlineHelpText>Indicates if a Cvent contact has been removed from address book.</inlineHelpText>
        <label>Cvent Contact Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Designation__c</fullName>
        <label>Designation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_EventCheckInDate__c</fullName>
        <label>Event Check-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_EventQuestionAnswers__c</fullName>
        <description>Stores the serialized map of question tag stub to the concatenated string of responses.</description>
        <label>Event Question Answers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_EventStub__c</fullName>
        <externalId>true</externalId>
        <label>Event Stub</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_ExternalObjectId__c</fullName>
        <description>Stores SF record Id Cvent contact has been originated from.</description>
        <externalId>true</externalId>
        <label>Salesforce Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_ExternalSystemId__c</fullName>
        <description>Stores SF organization Id Cvent contact has been originated from.</description>
        <label>Salesforce System Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_FailedEventQuestionAnswers__c</fullName>
        <description>Stores a list of errors that occurred during question answers type conversion.</description>
        <label>Failed Event Question Answers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_FirstName__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Gender__c</fullName>
        <label>Gender</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_GroupConfirmationNumber__c</fullName>
        <label>Group Confirmation Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HasRecordMatchingError__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the error is occurred during the record matching flow.</description>
        <label>Has Record Matching Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeAddress1__c</fullName>
        <label>Home Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeAddress2__c</fullName>
        <label>Home Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeAddress3__c</fullName>
        <label>Home Address 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeCity__c</fullName>
        <label>Home City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeCountryCode__c</fullName>
        <label>Home Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeCountryName__c</fullName>
        <label>Home Country Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeFax__c</fullName>
        <label>Home Fax</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomePhone__c</fullName>
        <label>Home Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomePostalCode__c</fullName>
        <label>Home Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeStateCode__c</fullName>
        <label>Home State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeStateName__c</fullName>
        <label>Home State Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_InternalNote__c</fullName>
        <label>Internal Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_IsExcludedFromEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opted-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_IsFreeloader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_IsGroupLeader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_IsObfuscation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obfuscated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_IsOriginatedFromThisOrg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the target Cvent contact has been originated from this SF instance via invitation or registration workflow.</description>
        <label>Originated From This Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_LastName__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MatchScenario__c</fullName>
        <description>Stores the record matching scenario which had been applied during matching with the Salesforce Contact/Lead.</description>
        <inlineHelpText>Stores the record matching scenario which had been applied during matching with the Salesforce Contact/Lead.</inlineHelpText>
        <label>Match Scenario</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Match</fullName>
                </value>
                <value>
                    <fullName>Single Match</fullName>
                </value>
                <value>
                    <fullName>Multiple Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MembershipAmountDue__c</fullName>
        <label>Membership Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MembershipExpirationDate__c</fullName>
        <label>Membership Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MembershipItem__c</fullName>
        <label>Membership Item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MembershipJoinDate__c</fullName>
        <label>Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MembershipLastRenewalDate__c</fullName>
        <label>Membership Last Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MembershipType__c</fullName>
        <label>Membership Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Message__c</fullName>
        <description>Stores the information/error message of the record matching flow.</description>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MiddleName__c</fullName>
        <label>Middle Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Nickname__c</fullName>
        <label>Nickname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Pager__c</fullName>
        <label>Pager</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PassportCountryCode__c</fullName>
        <label>Passport Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Prefix__c</fullName>
        <label>Prefix</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryAddress1__c</fullName>
        <label>Primary Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryAddress2__c</fullName>
        <label>Primary Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryAddress3__c</fullName>
        <label>Primary Address 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryCity__c</fullName>
        <label>Primary City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryCountryCode__c</fullName>
        <label>Primary Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryCountryName__c</fullName>
        <label>Primary Country Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryPostalCode__c</fullName>
        <label>Primary Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryRegistrantStub__c</fullName>
        <externalId>true</externalId>
        <label>Primary Registrant Stub</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryStateCode__c</fullName>
        <label>Primary State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryStateName__c</fullName>
        <label>Primary State Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_ProcessStatus__c</fullName>
        <description>Represents the status of the record matching flow.</description>
        <label>Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_ReferenceId__c</fullName>
        <label>Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_RegistrationDate__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_RegistrationPathId__c</fullName>
        <label>Registration Path Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_RegistrationPathName__c</fullName>
        <label>Registration Path</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_RegistrationType__c</fullName>
        <label>Registration Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_RespondedThrough__c</fullName>
        <label>Responded Through</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_SourceId__c</fullName>
        <label>Source Id</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_UnsubscribedFromEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsubscribed From Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkAddress1__c</fullName>
        <label>Work Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkAddress2__c</fullName>
        <label>Work Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkAddress3__c</fullName>
        <label>Work Address 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkCity__c</fullName>
        <label>Work City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkCountryCode__c</fullName>
        <label>Work Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkCountryName__c</fullName>
        <label>Work Country Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkFax__c</fullName>
        <label>Work Fax</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkPhone__c</fullName>
        <label>Work Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkPostalCode__c</fullName>
        <label>Work Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkStateCode__c</fullName>
        <label>Work State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkStateName__c</fullName>
        <label>Work State Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DONOTUSEXXXIndustrySectorXXX__c</fullName>
        <label>DO NOT USE XXX Industry Sector XXX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DONOTUSEXXXRoleXXX__c</fullName>
        <label>DO NOT USE XXX Role XXX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSOECGroup__c</fullName>
        <label>DSOEC Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSOECSession__c</fullName>
        <label>DSOEC Session</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSOECTimezone__c</fullName>
        <label>DSOEC Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSWCE__c</fullName>
        <label>DSW CE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSWORLD2020CEPASS__c</fullName>
        <label>DSWORLD 2020 CEPASS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DietaryPreferencesANZ__c</fullName>
        <label>Dietary Preferences ANZ</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Gluten Free</fullName>
                </value>
                <value>
                    <fullName>No eggs or dairy</fullName>
                </value>
                <value>
                    <fullName>No peanuts or tree nuts</fullName>
                </value>
                <value>
                    <fullName>No shellfish</fullName>
                </value>
                <value>
                    <fullName>Other - please contact me</fullName>
                </value>
                <value>
                    <fullName>Vegan</fullName>
                </value>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DietaryPreferences__c</fullName>
        <label>Dietary Preferences</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chicken</fullName>
                </value>
                <value>
                    <fullName>Fish</fullName>
                </value>
                <value>
                    <fullName>Gluten-free</fullName>
                    <isActive>false</isActive>
                    <label>Gluten-free</label>
                </value>
                <value>
                    <fullName>Halal</fullName>
                    <isActive>false</isActive>
                    <label>Halal</label>
                </value>
                <value>
                    <fullName>Kosher</fullName>
                    <isActive>false</isActive>
                    <label>Kosher</label>
                </value>
                <value>
                    <fullName>Meat</fullName>
                </value>
                <value>
                    <fullName>No eggs or dairy</fullName>
                    <isActive>false</isActive>
                    <label>No eggs or dairy</label>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>No peanuts or tree nuts</fullName>
                    <isActive>false</isActive>
                    <label>No peanuts or tree nuts</label>
                </value>
                <value>
                    <fullName>No shellfish</fullName>
                    <isActive>false</isActive>
                    <label>No shellfish</label>
                </value>
                <value>
                    <fullName>Other - please contact me</fullName>
                </value>
                <value>
                    <fullName>Vegan</fullName>
                </value>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EloquaContactID__c</fullName>
        <label>Eloqua Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foodpreferences__c</fullName>
        <label>Food preferences</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Gluten Free</fullName>
                </value>
                <value>
                    <fullName>Multiple or other; please contact me.</fullName>
                </value>
                <value>
                    <fullName>No Beef</fullName>
                </value>
                <value>
                    <fullName>No Eggs or Dairy</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>No Nuts</fullName>
                </value>
                <value>
                    <fullName>No Pork</fullName>
                </value>
                <value>
                    <fullName>No Shellfish</fullName>
                </value>
                <value>
                    <fullName>Pescatarian</fullName>
                </value>
                <value>
                    <fullName>Vegan</fullName>
                </value>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDCNumber__c</fullName>
        <label>GDC Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GalileosOwner__c</fullName>
        <label>Galileos Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GovernmentPractitionerId__c</fullName>
        <label>GovernmentPractitionerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GovernmentPractitionerType__c</fullName>
        <label>GovernmentPractitionerType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CDT</fullName>
                </value>
                <value>
                    <fullName>GDC</fullName>
                </value>
                <value>
                    <fullName>NPI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IndustrySector__c</fullName>
        <label>IndustrySector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGAAreyouattendingaspartofapart__c</fullName>
        <label>LEGA Are you attending as part of a part</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes, 1-800-DENTIST</fullName>
                    <isActive>false</isActive>
                    <label>Yes, 1-800-DENTIST</label>
                </value>
                <value>
                    <fullName>Yes, DentalPost</fullName>
                    <isActive>false</isActive>
                    <label>Yes, DentalPost</label>
                </value>
                <value>
                    <fullName>Yes, Dental Product Shopper</fullName>
                </value>
                <value>
                    <fullName>Yes, Fortune Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACY2015GACMeeting__c</fullName>
        <label>LEGACY - 2015 GAC Meeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACY3DSummitSpecialty__c</fullName>
        <label>LEGACY - 3D Summit Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Endodontist</fullName>
                </value>
                <value>
                    <fullName>General Practitioner</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Oral Surgeon</fullName>
                </value>
                <value>
                    <fullName>Orthodontist</fullName>
                </value>
                <value>
                    <fullName>Pediatric</fullName>
                </value>
                <value>
                    <fullName>Periodontist</fullName>
                </value>
                <value>
                    <fullName>Prosthodontist</fullName>
                </value>
                <value>
                    <fullName>Radiologist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACY3DUNITSerial__c</fullName>
        <label>LEGACY - 3D UNIT Serial #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACY3DUNIT__c</fullName>
        <label>LEGACY - 3D UNIT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>GALILEOS COMFORT</fullName>
                </value>
                <value>
                    <fullName>GALILEOS COMFORT PLUS</fullName>
                </value>
                <value>
                    <fullName>GALILEOS COMPACT</fullName>
                </value>
                <value>
                    <fullName>ORTHOPHOS SL Ai (11x10)</fullName>
                </value>
                <value>
                    <fullName>ORTHOPHOS SL i (8x8)</fullName>
                </value>
                <value>
                    <fullName>ORTHOPHOS XG 3D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYADASpecialNeeds__c</fullName>
        <label>LEGACY - ADA / Special Needs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Hearing Impaired</fullName>
                </value>
                <value>
                    <fullName>Visually Impaired</fullName>
                </value>
                <value>
                    <fullName>Wheelchair Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYAcademicTitle__c</fullName>
        <label>LEGACY - Academic Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dr</fullName>
                </value>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
                <value>
                    <fullName>Prof</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYAcademicTitleother__c</fullName>
        <label>LEGACY - Academic Title other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYAttendeeType__c</fullName>
        <label>LEGACY - Attendee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dental Assistant</fullName>
                </value>
                <value>
                    <fullName>Dental Lab Technician</fullName>
                </value>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Hygienist</fullName>
                </value>
                <value>
                    <fullName>Office Manager</fullName>
                </value>
                <value>
                    <fullName>Office Staff</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEGACYCity__c</fullName>
        <label>LEGACY - City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYCompanyWebsiteURL__c</fullName>
        <label>LEGACY - Company Website URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEGACYCostCenter__c</fullName>
        <label>LEGACY - Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>